# strata

./: Cargo.toml  README.md  cspell.yml
src/: app.rs  error.rs  lib.rs  main.rs  message.rs  ui.rs  update.rs  view.rs
src/app/: base_component.rs  component.rs  display_focus.rs
src/app/component/: command.rs  error_popup.rs  file_view.rs  table_selector.rs  table_view.rs
src/model/: app.rs  component.rs  table.rs
src/model/app/: state.rs
src/model/component/: command.rs  error_popup.rs  table_selector.rs  table_view.rs
src/ui/: component.rs  render_error.rs  render_exit.rs  render_footer.rs  render_input.rs  render_table.rs  render_table_list.rs
src/ui/widget/: popup.rs
src/update/: handler.rs
src/update/handler/: add_handler.rs  cancel_handler.rs  delete_handler.rs  edit_handler.rs  enter_handler.rs  handle_add.rs  handle_cancel.rs  handle_delete.rs  handle_edit.rs  handle_edit_cell.rs  handle_edit_header.rs  handle_edit_table_name.rs  handle_enter.rs  handle_jump_cell.rs  handle_jump_table.rs  handle_move_cursor.rs  handle_open.rs  handle_save.rs  handle_table_size.rs  hyper_edit_handler.rs  jump_handler.rs  move_cursor_handler.rs  open_handler.rs  save_handler.rs  table_size_handler.rs
src/view/: render_exit.rs  render_footer.rs
tests/data/: fluits.csv
