[package]
name = "strata"
version = "0.1.0"
authors = ["Kapiyva <ri9py1201@proton.me>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A TUI CSV editor written in Rust"
repository = "https://github.com/kapiyva/strata"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
csv = "1.3.1"
eyre = "0.6.12"
ratatui = "0.29.0"
thiserror = "2.0.11"
tui-realm-treeview = "2.0.0"
